--- a/02-Listas-Navegacao/produtos.html
+++ b/02-Listas-Navegacao/produtos.html
@@ -29,7 +29,9 @@
             src="./img/produtos/cabelo.jpg"
             alt="imagem de uma cabeça com cabelos"
           />
-          <p>Na tesoura ou na máquina, como o cliente preferir</p>
+          <p class="produto-descricao">
+            Na tesoura ou na máquina, como o cliente preferir
+          </p>
           <p class="produto-preco">R$ 25,00</p>
         </li>
         <li>
@@ -38,7 +40,7 @@
             src="./img/produtos/barba.jpg"
             alt="imagem de uma cabeça com barba"
           />
-          <p>Corte e desenho profissional de barba</p>
+          <p class="produto-descricao">Corte e desenho profissional de barba</p>
           <p class="produto-preco">R$ 18,00</p>
         </li>
         <li>
@@ -47,7 +49,7 @@
             src="./img/produtos/cabelo+barba.jpg"
             alt="imagem de uma cabeça com cabelos e barba"
           />
-          <p>Pacote completo de cabelo e barba</p>
+          <p class="produto-descricao">Pacote completo de cabelo e barba</p>
           <p class="produto-preco">R$ 35,00</p>
         </li>
       </ul>
