--- a/02-Listas-Navegacao/produtos.html
+++ b/02-Listas-Navegacao/produtos.html
@@ -55,4 +55,8 @@
       </ul>
     </main>
   </body>
+  <footer>
+    <img src="./img/produtos/logo-branco.png">
+    <p class="copyright">&copy; Copyright Barbearia Alura - 2023</p>
+  </footer>
 </html>
