--- a/03-Formularios-tabelas/contato.html
+++ b/03-Formularios-tabelas/contato.html
@@ -11,7 +11,7 @@
     <header>
       <!-- cabeçalho do conteúdo -->
       <div class="caixa">
-        <h1><img src="./img/produtos/logo.png" /></h1>
+        <h1><img src="./img/produtos/logo.png" alt="Logo da Babearia Alura"/></h1>
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -24,13 +24,19 @@
     <main>
       <form>
         <label for="nomesobrenome">Nome e sobrenome</label>
-        <input type="text" id="nomesobrenome" class="input-padrao" />
+        <input type="text" id="nomesobrenome" class="input-padrao" required />
 
         <label for="email">e-mail</label>
-        <input type="email" id="email" class="input-padrao" />
+        <input
+          type="email"
+          id="email"
+          class="input-padrao"
+          required
+          placeholder="seuemail@dominio.com"
+        />
 
         <label for="telefone">Telefone</label>
-        <input type="text" id="telefone" class="input-padrao" />
+        <input type="tel" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx" />
 
         <label for="mensagem">Mensagem</label>
         <textarea
@@ -38,10 +44,11 @@
           rows="10"
           id="mensagem"
           class="input-padrao"
+          required
         ></textarea>
 
-        <div>
-          <p>Como prefere o nosso contato?</p>
+        <fieldset>
+          <legend>Como prefere o nosso contato?</legend>
           <label for="radio-email"
             ><input
               type="radio"
@@ -67,29 +74,30 @@
               name="contato"
               value="whatsApp"
               id="radio-whatsapp"
+              checked
             />
             WhatsApp</label
           >
-        </div>
+        </fieldset>
 
-        <div>
-          <p>Qual horário prefere ser atendido?</p>
+        <fieldset>
+          <legend>Qual horário prefere ser atendido?</legend>
           <select>
             <option>Manhã</option>
             <option>Tarde</option>
             <option>Noite</option>
           </select>
-        </div>
+        </fieldset>
 
         <label class="checkbox"
-          ><input type="checkbox" /> Gostaria de receber nossas novidades por
+          ><input type="checkbox" checked /> Gostaria de receber nossas novidades por
           e-mail?</label
         >
-        <input type="submit" name="contato" value="enviar formulário" />
+        <input type="submit" name="contato" value="Enviar formulário" class="enviar"/>
       </form>
     </main>
     <footer>
-      <img src="./img/produtos/logo-branco.png" />
+      <img src="./img/produtos/logo-branco.png" alt="Logo da Babearia Alura"/>
       <p class="copyright">&copy; Copyright Barbearia Alura - 2023</p>
     </footer>
   </body>
